--- a/index.html
+++ b/index.html
@@ -3,45 +3,23 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Clonernews</title>
+    <title>HACKERNEWS</title>
+    <link rel="stylesheet" href="styles.css">
+    <script type="module" src="clonernews.js"></script>
 </head>
 
 <body>
-    <div id="header">
-        <h1>CLONERNEWS</h1>
+    <header id="head">
+        <button id="NewStories">Stories</button>
+        <button id="job">Job</button>
+        <button id="Poll">Poll</button>
+        <h2 id="update">Update(0)</h2>
+        
+    </header>
+    <div id="items-container">
+        
     </div>
-
-    <div class="popUp" id="popUp">
-        <div class="popUpContainer" id="popUpContainer"></div>
-    </div>
-
-    <div>
-        <select name="" id="categoriesSelector" >
-            <option value="topstories" selected>topstories</option>
-            <option value="newstories">newstories</option>
-            <option value="beststories">beststories</option>
-        </select>
-    </div>
-
-   <table id="tableT">
-    <thead>
-        <tr>
-            <th>Title</th>
-            <th>text</th>
-            <th>time</th>
-        </tr>
-    </thead>
-    <tbody>
-
-
-    </tbody>
-   </table>
-   <button id="prev">Previous</button>
-   <button id="next">Next</button>
+    <button id="prev-button" class="paginate">Previous</button>
+    <button id="next-button" class="paginate">Next</button>
 </body>
-
 </html>
-
-<script type="text/javascript" src="src.js"></script>
